[package]
name = "cirun-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.26"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "2.0.12"
url = "2.5.4"
