[package]
name = "cirun-agent"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/aktechlabs/cirun-agent"
authors = ["Amit Kumar <dtu.amit@gmail.com>"]

[package.metadata.wix]
upgrade-guid = "8093D5D1-A757-4C3D-93AD-631CAA3BCC44"
path-guid = "77BB9593-9CF5-44B4-B000-5CDA6D9D1282"
license = false
eula = false

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.26"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "2.0.12"
url = "2.5.4"
tempfile = "3.18.0"
backon = "1.4.0"
anyhow = "1.0.97"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
